cmake_minimum_required(VERSION 3.1)
project (TeamTalk5ProServer)

include_directories (../../Library/TeamTalk_DLL)
link_directories (../../Library/TeamTalk_DLL)

option (BUILD_TEAMTALK_SERVER_TEAMTALKSERVER "Build TeamTalk Server Example for TeamTalk 5 Professional Edition" ON)

if (MSVC)
  add_definitions (-DUNICODE -D_UNICODE)
endif()

if (BUILD_TEAMTALK_SERVER_TEAMTALKSERVER)
  add_executable (TeamTalk5ProServer Main.cpp)
  set_property(TARGET TeamTalk5ProServer PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../Library/TeamTalk_DLL")
  if (BUILD_TEAMTALK_PRODLL)
    target_link_libraries (TeamTalk5ProServer TeamTalk5ProDLL)
  else()
    find_library(TEAMTALK5PRO_LIBRARY TeamTalk5Pro PATHS ../../Library/TeamTalk_DLL)
    if (NOT TEAMTALK5PRO_LIBRARY)
      message(WARNING "Cannot find TeamTalk5Pro shared library in ../../Library/TeamTalk_DLL")
    else()
      target_link_libraries (TeamTalk5ProServer ${TEAMTALK5PRO_LIBRARY})
    endif()
  endif()
  install (TARGETS TeamTalk5ProServer DESTINATION Server/TeamTalkServer)
endif()
